--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -18,7 +18,7 @@
 }
 
 .sidebar .new-chat {
-  margin-top: 10px;
+  margin-top: 50px;
   display: inline-flex;
   align-items: center;
   gap: 10px;
@@ -53,4 +53,14 @@
 
 .sidebar .recent-entry:hover{
     background-color: #e2e6eb;
+}
+
+.sidebar .bottom{
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar .bottom-item{
+  padding-right: 10px;
+  cursor: pointer;
 }
